# confold

./: .envrc  .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  LICENSE  LOCAL_DEV.md  README.md  deny.toml  rust-toolchain.toml
.cargo/: audit.toml
.github/: FUNDING.yml
.github/workflows/: publish-chocolatey.yml  publish-distributions.yml  release.yml  verify-distribution.yml
confold-app/: .gitignore  .npmrc  package.json  playwright.config.ts  pnpm-lock.yaml  pnpm-workspace.yaml  vite.config.js  vitest.config.ts
confold-app/e2e/: smoke.spec.ts  tauri-shim.ts
confold-app/src/: test-setup.component.ts
confold-app/src-tauri/: Cargo.toml  tauri.conf.json
confold-app/src-tauri/icons/: icon.icns
confold-app/src-tauri/src/: apply.rs  diff.rs  lib.rs  main.rs  plan.rs  recents.rs  scan.rs  shell.rs  sources.rs
confold-app/src/lib/: commands.test.ts  commands.ts  expand.svelte.ts  expand.test.ts  filter.svelte.ts  filter.test.ts  format.test.ts  format.ts  hex.test.ts  hex.ts  imagediff.test.ts  imagediff.ts  migrate.test.ts  migrate.ts  recompute.test.ts  recompute.ts  sbs-diff.test.ts  sbs-diff.ts  sbs-hunks.test.ts  sbs-hunks.ts  selection.svelte.ts  selection.test.ts  sort.svelte.ts  sort.test.ts  sources.test.ts  sources.ts  test-fixtures.ts  types.ts
confold-app/src/lib/utils/: compare-helpers.ts
confold-app/src/routes/: +page.svelte  DiffNode.svelte  DiffNode.svelte.test.ts  FileViewHeader.svelte  HexView.svelte  ImageView.svelte  MigrateConfigPanel.svelte  MigratePlanModal.svelte  MigrateProgressModal.svelte  SideBySide.svelte  SideBySideSkeleton.svelte  SourcePicker.svelte  SyncConfigPanel.svelte  SyncPlanModal.svelte  deep-link-flow.svelte.test.ts  migrate-flow.svelte.test.ts  sync-flow.svelte.test.ts
crates/confold-cli/: Cargo.toml
crates/confold-cli/src/: main.rs
crates/confold-cli/tests/: cli.rs
crates/confold-core/: Cargo.toml  README.md
crates/confold-core/benches/: compare.rs
crates/confold-core/src/: compare.rs  config.rs  content.rs  error.rs  filter.rs  lib.rs  model.rs  render.rs
crates/confold-core/tests/: compare_local.rs
crates/confold-s3/: .gitignore  Cargo.toml
crates/confold-s3/examples/: s3-demo.rs
crates/confold-s3/src/: lib.rs
crates/confold-s3/tests/: integration.rs
crates/confold-semantic/: Cargo.toml
crates/confold-semantic/src/: lib.rs
crates/confold-sftp/: Cargo.toml
crates/confold-sftp/src/: lib.rs
crates/confold-sftp/tests/: integration.rs
crates/confold-sync/: Cargo.toml
crates/confold-sync/src/: lib.rs
crates/confold-sync/tests/: sync.rs
crates/confold-textdiff/: Cargo.toml
crates/confold-textdiff/src/: lib.rs
crates/confold-vfs/: Cargo.toml
crates/confold-vfs/src/: capabilities.rs  error.rs  lib.rs  local.rs  meta.rs  path.rs
scripts/: bump-packaging.sh  check-stale-version-refs.sh  dev-register-deeplink-macos.sh  gen-demo.sh  s3-demo.sh  sftp-demo.sh  validate-winget-manifests.sh
scripts/tests/: check-stale-version-refs.sh
skills/confold/: SKILL.md
skills/confold/agents/: openai.yaml
skills/confold/references/: protocol.md
web/: index.html
