[package]
name = "confold-cli"
description = "Confold command-line frontend."
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[[bin]]
name = "confold"
path = "src/main.rs"

[dependencies]
confold-core.workspace = true
confold-semantic.workspace = true
confold-vfs.workspace = true
clap.workspace = true
serde_json.workspace = true
anyhow.workspace = true

[dev-dependencies]
assert_cmd.workspace = true
predicates.workspace = true
tempfile.workspace = true

[lints]
workspace = true
