# Standalone (excluded from the engine workspace) because its dev-only S3 test server (`s3s`) pins an
# `hmac` pre-release that conflicts with `russh`'s `hmac` in the shared lockfile. The real dependency
# (`object_store`) does NOT pull `s3s`, so an app depending on both confold-sftp and confold-s3 is fine.
[package]
name = "confold-s3"
version = "0.6.0"
edition = "2021"
license = "Apache-2.0"
rust-version = "1.96"

[dependencies]
confold-vfs = { path = "../confold-vfs" }
# Pure-Rust S3 client (rustls, no native deps). The `aws` feature enables the S3 backend.
object_store = { version = "0.13.2", features = ["aws"] }
# `S3Source` drives object_store's async API to completion behind the synchronous `Source` trait,
# on its own runtime (same pattern as `confold-sftp`).
tokio = { version = "1.49", features = ["rt-multi-thread", "net", "time", "io-util", "macros"] }
futures = "0.3"
bytes = "1"

[dev-dependencies]
# In-process, no-Docker S3 server for hermetic integration tests (also used by the `s3-demo` example).
s3s = "0.13.0"
s3s-fs = "0.13.0"
hyper = { version = "1", features = ["server", "http1", "http2"] }
hyper-util = { version = "0.1.20", features = ["server-auto", "tokio"] }
tempfile = "3"
anyhow = "1"
