[package]
name = "confold-semantic"
description = "Validated protocol for AI-assisted semantic document comparison and merge proposals."
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
similar.workspace = true
thiserror.workspace = true
tempfile.workspace = true

[dev-dependencies]
tempfile.workspace = true

[lints]
workspace = true
