[package]
name = "confold-textdiff"
description = "Line- and word-level text diff for Confold's side-by-side file view."
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
similar.workspace = true
serde.workspace = true

[lints]
workspace = true
